# Nezumi

./: .dockerfile  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: lib.rs
common/: Cargo.toml
common/src/configuration/: mod.rs
